tests/res/has/error_spec_key.say
say x = 1;
say k = "a";
x has { [k]: 2 }; // error: Expected a shape field
